# metroidveniaEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  readme.md
resources/entities/: entityShapes.json
resources/levels/: dashLevel 2.json  dashLevel 3 2.json  dashLevel 3.json  dashLevel.json  level1 2.json  level1.json  level2.json  level3.json  level4.json  level5.json  notgrab.json  pogoRoom.json  pogoRoom2.json  rom1.json  spikeLeft.json  spikeTest.json  testZip.json  zipRight.json  zipRoom.json  zipRoomTest.json  zipchallenge.json
resources/shaders/: compile_all_shaders.bat  gl2d_batch.frag  gl2d_batch.frag.spv  gl2d_batch.vert  gl2d_batch.vert.spv
resources/world/: world.json
src/gameLayer/: EntityData.cpp  EntityData.h  EntityEditor.cpp  EntityEditor.h  GameRenderWindow.cpp  GameRenderWindow.h  Gameplay.cpp  Gameplay.h  LevelEditor.cpp  LevelEditor.h  RoomIo.cpp  RoomIo.h  WorldEditor.cpp  WorldEditor.h  WorldIo.cpp  WorldIo.h  door.h  easing.h  gameLayer.cpp  gameLayer.h  physics.cpp  physics.h  player.h  pogoCircle.h  randomStuff.cpp  randomStuff.h  room.cpp  room.h  spawnRegion.h  staticVector.h  zipline.h
src/platform/: SDL3main.cpp  imguiTools.cpp  imguiTools.h  logs.cpp  platformInput.cpp  platformInput.h  platformTools.cpp  platformTools.h
src/platform/gl2d/: gl2d.cpp  gl2d.h  gl2dSDL_GPU.cpp
src/platform/glui/: glui.cpp
webasm/: webBuild.bat  webOpenPage.bat  webRun.bat  webStop.bat
